# countryAdmin

./: .gitignore  README.md  TODO  area_default.db  country_default.db  launch.sh  processes-5.json  processes.json  pyproject.toml
areaadmin/extensions/: extensions.py  lafabriquediy.py  localfile.py  lowtechlab.py  lowtechlabimport.py
areaadmin/server/: areaAdmin.py  exampleBuisness.py  manager.py
areaadmin/server/custom/: flask.py  tools.py
areaadmin/static/: areaAdmin.js  common.js  dashboard.html  guard.html  guard.js  index.html  loadVars.html  login.html  openapi.html  process.js
areaadmin/static/dashboard/: countries.js  dashboard.html  dashboard.js  governance.js  helpers.js  process.js  subareas.js
areaadmin/static/guard/: guard.html  guard.js
areaadmin/static/user/: user.html  user.js
areaadmin/templates/: index.html  manager.html
countryAdmin/: countryAdmin.py
countryAdmin/static/: dashboard.js
countryAdmin/templates/: dashboard.html  index.html  login.html
countryadmin/: countryAdmin.py  exampleBuisness.py  manager.py  processes.db
countryadmin/extensions/: lowtechlabimport.py
countryadmin/server/: countryAdmin.py  exampleBuisness.py  manager.py
countryadmin/static/: countryAdmin.js  countryAdminFront.js  dashboard.js  dashboardCountries.js  dashboardHelpers.js  guard.js
countryadmin/static/dashboard/: countries.js  dashboard.js  helpers.js  process.js
countryadmin/templates/: dashboard.html  guard.html  index.html  manager.html
tests/: test_AreaAdmin.py  test_CountryAdmin.py
