[tool.poetry]
name = "countryAdmin"
version = "0.1.0"
description = "Simple country admin"
authors = ["ffprivacy <ffprivacy@netcourrier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"


flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
countryAdmin = 'countryadmin.countryAdmin:main'
