[tool.poetry]
name = "areaAdmin"
version = "0.1.0"
description = "Simple area admin"
authors = ["ffprivacy <ffprivacy@netcourrier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"


flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"

flask-cors = "^4.0.1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
areaAdmin = 'areaadmin.server.areaAdmin:main'
areaManager = 'areaadmin.server.manager:main'
areaAdminExt = 'areaadmin.extensions.extensions:main'

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
